# Miracle

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
Demos/Tetris/: CMakeLists.txt  Constants.h  Menu.h  Row.h  ScoreBoard.h  Shapes.h  Sound.h  Tetris.cpp  Tetris.h  Text.cpp  Text.h
Demos/Tetris/ttf2mesh/: ttf2mesh.c  ttf2mesh.h
Miracle/: CMakeLists.txt
Miracle/src/Miracle/Infrastructure/View/Glfw/: Window.cpp
